--- a/index.html
+++ b/index.html
@@ -4,25 +4,25 @@
     <!-- customize head -->
        <style>
   /* 去除通知栏 右上角 X */
-  .notify-render .hope-close-button {
+  。notify-render .hope-close-button {
     display: none;
   }
   /*去掉底部*/
-  .footer {
+  。footer {
     display: none !important;
   }
 
       /*白天背景图*/
-  .hope-ui-light {
-    background-image: url("https://file.51pptmoban.com/d/file/2025/06/14/4ab1e5946a02cfb1dfe45aa4710e60a3.jpg") !important;
+  。hope-ui-light {
+    background-image: url("https://s3.hi168.com/hi168-19352-50178apc/图片收藏/bg1.jpg") !important;
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
     background-position-x: center;
   }
   /*夜间背景图*/
-  .hope-ui-dark {
-    background-image: url("https://file.51pptmoban.com/d/file/2019/03/24/7efdfac3e1d6125d9c8893cb45985466.jpg") !important;
+  。hope-ui-dark {
+    background-image: url("https://s3.hi168.com/hi168-19352-50178apc/图片收藏/bg4.jpg") !important;
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
@@ -30,7 +30,7 @@
   }
     
     /*主列表白天模式透明*/
-    .obj-box.hope-stack.hope-c-dhzjXW.hope-c-PJLV.hope-c-PJLV-igScBhH-css {
+    。obj-box.hope-stack.hope-c-dhzjXW.hope-c-PJLV.hope-c-PJLV-igScBhH-css {
         backdrop-filter: blur(10px); /* 毛玻璃效果的强度 */
         -webkit-backdrop-filter: blur(10px); /* 为 Safari 浏览器添加兼容性 */
         background-color: rgba(200, 200, 200, 0.2) !important;
