--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
       /*白天背景图*/
   。hope-ui-light {
-    background-image: url("https://s3.hi168.com/hi168-19352-50178apc/图片收藏/bg1.jpg") !important;
+    background-image: url("https://s3.hi168.com/hi168-19352-50178apc/%E5%9B%BE%E7%89%87%E6%94%B6%E8%97%8F/bg1.jpg") !important;
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
@@ -22,7 +22,7 @@
   }
   /*夜间背景图*/
   。hope-ui-dark {
-    background-image: url("https://s3.hi168.com/hi168-19352-50178apc/图片收藏/bg4.jpg") !important;
+    background-image: url("https://s3.hi168.com/hi168-19352-50178apc/%E5%9B%BE%E7%89%87%E6%94%B6%E8%97%8F/bg4.jpg") !important;
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
