--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
       /*白天背景图*/
   。hope-ui-light {
-    background-image: url("https://file.51pptmoban.com/d/file/2025/06/14/4ab1e5946a02cfb1dfe45aa4710e60a3.jpg") !important;
+    background-image: url("https://s3.hi168.com/hi168-19352-50178apc/%E5%9B%BE%E7%89%87%E6%94%B6%E8%97%8F/bg1.jpg") !important;
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
@@ -22,7 +22,7 @@
   }
   /*夜间背景图*/
   。hope-ui-dark {
-    background-image: url("https://file.51pptmoban.com/d/file/2018/05/21/2b65d81b118f3a405e341d4f14e29b6d.jpg") !important;
+    background-image: url("https://s3.hi168.com/hi168-19352-50178apc/%E5%9B%BE%E7%89%87%E6%94%B6%E8%97%8F/bg4.jpg") !important;
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
