--- a/index.html
+++ b/index.html
@@ -2,18 +2,17 @@
 <html lang="en" translate="no">
   <head>
     <!-- customize head -->
-       <style>
   /* 去除通知栏 右上角 X */
-  。notify-render .hope-close-button {
+  .notify-render .hope-close-button {
     display: none;
   }
   /*去掉底部*/
-  。footer {
+  .footer {
     display: none !important;
   }
 
-      /*白天背景图*/
-  。hope-ui-light {
+  /*白天背景图*/
+  .hope-ui-light {
     background-image: url("https://s3.hi168.com/hi168-19352-50178apc/%E5%9B%BE%E7%89%87%E6%94%B6%E8%97%8F/bg1.jpg") !important;
     background-repeat: no-repeat;
     background-size: cover;
@@ -21,7 +20,7 @@
     background-position-x: center;
   }
   /*夜间背景图*/
-  。hope-ui-dark {
+  .hope-ui-dark {
     background-image: url("https://s3.hi168.com/hi168-19352-50178apc/%E5%9B%BE%E7%89%87%E6%94%B6%E8%97%8F/bg4.jpg") !important;
     background-repeat: no-repeat;
     background-size: cover;
@@ -29,20 +28,20 @@
     background-position-x: center;
   }
     
-    /*主列表白天模式透明*/
-    。obj-box.hope-stack.hope-c-dhzjXW.hope-c-PJLV.hope-c-PJLV-igScBhH-css {
-        backdrop-filter: blur(10px); /* 毛玻璃效果的强度 */
-        -webkit-backdrop-filter: blur(10px); /* 为 Safari 浏览器添加兼容性 */
-        background-color: rgba(200, 200, 200, 0.2) !important;
-        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* 阴影效果 */
-    }
-    /*主列表夜间模式透明*/
-    .obj-box.hope-stack.hope-c-dhzjXW.hope-c-PJLV.hope-c-PJLV-iigjoxS-css {
-        backdrop-filter: blur(10px); /* 毛玻璃效果的强度 */
-        -webkit-backdrop-filter: blur(10px); /* 为 Safari 浏览器添加兼容性 */
-        background-color: rgba(0, 0, 0, 0.3) !important;
-        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* 阴影效果 */
-    }
+  /*主列表白天模式透明*/
+  .obj-box.hope-stack.hope-c-dhzjXW.hope-c-PJLV.hope-c-PJLV-igScBhH-css {
+    backdrop-filter: blur(10px); /* 毛玻璃效果的强度 */
+    -webkit-backdrop-filter: blur(10px); /* 为 Safari 浏览器添加兼容性 */
+    background-color: rgba(200, 200, 200, 0.2) !important;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* 阴影效果 */
+  }
+  /*主列表夜间模式透明*/
+  .obj-box.hope-stack.hope-c-dhzjXW.hope-c-PJLV.hope-c-PJLV-iigjoxS-css {
+    backdrop-filter: blur(10px); /* 毛玻璃效果的强度 */
+    -webkit-backdrop-filter: blur(10px); /* 为 Safari 浏览器添加兼容性 */
+    background-color: rgba(0, 0, 0, 0.3) !important;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* 阴影效果 */
+  }
     /*readme白天模式透明*/
     .hope-c-PJLV.hope-c-PJLV-ikSuVsl-css {
         backdrop-filter: blur(10px); /* 毛玻璃效果的强度 */
@@ -98,19 +97,19 @@
     }
 
 /*白天模式 搜索主体+毛玻璃*/
-。hope-ui-light .hope-c-PJLV-iiBaxsN-css{
+hope-ui-light 。hope-c-PJLV-iiBaxsN-css{
    background-color: rgba(200, 200, 200, 0.2)!important;
    backdrop-filter: blur(10px)!important;
 }
 
 /*白天模式 搜索栏输入框+毛玻璃*/
-.hope-ui-light .hope-c-kvTTWD-hYRNAb-variant-filled{
+hope-ui-light .hope-c-kvTTWD-hYRNAb-variant-filled{
    background-color: rgba(200, 200, 200, 0.2)!important;
    backdrop-filter: blur(10px)!important;
 }
 
 /*白天模式 搜索按钮+毛玻璃*/
-.hope-ui-light .hope-c-PJLV-ikEIIxw-css{
+hope-ui-light .hope-c-PJLV-ikEIIxw-css{
    background-color: rgba(200, 200, 200, 0.2)!important;
    backdrop-filter: blur(10px)!important;
    padding: var(--hope-space-1)!important;
@@ -163,7 +162,7 @@ input:focus {
     <link
       rel="shortcut icon"
       type="image/ico"
-      href="https://res.oplist.org/logo/logo.svg"
+      href="https://cdn.jsdmirror.cn/gh/alist-org/logo@main/logo.svg"
     />
     <title>Loading...</title>
     <script>
