--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
     <!-- customize head -->
     <style>
       /* 去除通知栏右上角 X */
-      。notify-render 。hope-close-button {
+      .notify-render 。hope-close-button {
         display: none;
       }
 
       /* 去掉底部 */
-      。footer {
+      .footer {
         display: none !important;
       }
 
       /* 白天背景图 */
-      。hope-ui-light {
+      .hope-ui-light {
         background-image: url("https://img.sinorise.org/file/1765715050029_bg1.jpg") !important;
         background-repeat: no-repeat;
         background-size: cover;
@@ -23,7 +23,7 @@
       }
 
       /* 夜间背景图 */
-      。hope-ui-dark {
+      .hope-ui-dark {
         background-image: url("https://s3.hi168.com/hi168-19352-50178apc/%E5%9B%BE%E7%89%87%E6%94%B6%E8%97%8F/bg4.jpg") !important;
         background-repeat: no-repeat;
         background-size: cover;
@@ -32,7 +32,7 @@
       }
 
       /* 主列表白天模式透明 */
-      。obj-box.hope-stack.hope-c-dhzjXW.hope-c-PJLV.hope-c-PJLV-igScBhH-css {
+      .obj-box.hope-stack.hope-c-dhzjXW.hope-c-PJLV.hope-c-PJLV-igScBhH-css {
         backdrop-filter: blur(10px);
         -webkit-backdrop-filter: blur(10px);
         background-color: rgba(200, 200, 200, 0.2) !important;
@@ -159,6 +159,7 @@
 
       /* 设置字体阴影 */
       * {
+        color: #1f1f1f;
         text-shadow: 0px 0px 0.8px !important;
       }
     </style>
