--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
       /* 夜间背景图 */
       .hope-ui-dark {
-        background-image: url("https://s3.hi168.com/hi168-19352-50178apc/%E5%9B%BE%E7%89%87%E6%94%B6%E8%97%8F/bg4.jpg") !important;
+        background-image: url("https://img.sinorise.org/file/1765716042743_023d8b1099f080cb9ddaacd2c8473b62.jpg") !important;
         background-repeat: no-repeat;
         background-size: cover;
         background-attachment: fixed;
@@ -159,7 +159,6 @@
 
       /* 设置字体阴影 */
       * {
-        color: #1f1f1f;
         text-shadow: 0px 0px 0.8px !important;
       }
     </style>
