--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <!-- customize head -->
     <style>
       /* 去除通知栏右上角 X */
-      .notify-render 。hope-close-button {
+      .notify-render .hope-close-button {
         display: none;
       }
 
@@ -159,7 +159,7 @@
 
       /* 设置字体阴影 */
       * {
-        text-shadow: 0px 0px 0.8px !important;
+        text-shadow: 0px 0px 0.7px !important;
       }
     </style>
 
