--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
       /* 白天背景图 */
       .hope-ui-light {
-        background-image: url("https://img.sinorise.org/file/1765715050029_bg1.jpg") !important;
+        background-image: url("https://img.xfiles.dpdns.org/1765715050029_bg1.jpg") !important;
         background-repeat: no-repeat;
         background-size: cover;
         background-attachment: fixed;
@@ -24,7 +24,7 @@
 
       /* 夜间背景图 */
       .hope-ui-dark {
-        background-image: url("https://img.sinorise.org/file/1765716042743_023d8b1099f080cb9ddaacd2c8473b62.jpg") !important;
+        background-image: url("https://img.xfiles.dpdns.org/1765716042743_023d8b1099f080cb9ddaacd2c8473b62.jpg") !important;
         background-repeat: no-repeat;
         background-size: cover;
         background-attachment: fixed;
@@ -159,7 +159,7 @@
 
       /* 设置字体阴影 */
       * {
-        text-shadow: 0px 0px 0.7px !important;
+        text-shadow: 0px 0px 0.8px !important;
       }
     </style>
 
