--- a/index.html
+++ b/index.html
@@ -161,6 +161,14 @@
       * {
         text-shadow: 0px 0px 0.8px !important;
       }
+	  
+	  /* 标签栏 hover 状态去掉横线/阴影 */
+      .header .tab:hover,
+      .header .tab:focus {
+	      box-shadow: none !important;
+          border-bottom: none !important;
+      }
+
     </style>
 
     <meta charset="utf-8" />
