--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
       /* 顶部 */
       #root > .header {
-        background: rgba(255, 255, 255, 0.01);  /* 修改这一行：从0改为0.01 */
+        background: rgba(255, 255, 255, 0);
       }
 
       /* 导航条 */
