--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
       /* 白天背景图 */
       .hope-ui-light {
-        background-image: url("https://img.xfiles.dpdns.org/1765715050029_bg1.jpg") !important;
+        background-image: url("https://s3.hi168.com/hi168-19352-7673z2ft/Picture/bg1.jpg") !important;
         background-repeat: no-repeat;
         background-size: cover;
         background-attachment: fixed;
@@ -24,7 +24,7 @@
 
       /* 夜间背景图 */
       .hope-ui-dark {
-        background-image: url("https://img.xfiles.dpdns.org/1765716042743_023d8b1099f080cb9ddaacd2c8473b62.jpg") !important;
+        background-image: url("https://https://s3.hi168.com/hi168-19352-7673z2ft/Picture/bg4.jpg") !important;
         background-repeat: no-repeat;
         background-size: cover;
         background-attachment: fixed;
