--- a/index.html
+++ b/index.html
@@ -2,167 +2,6 @@
 <html lang="en" translate="no">
   <head>
     <!-- customize head -->
-    <style>
-      /* 去除通知栏右上角 X */
-      .notify-render .hope-close-button {
-        display: none;
-      }
-
-      /* 去掉底部 */
-      .footer {
-        display: none !important;
-      }
-
-      /* 白天背景图 */
-      .hope-ui-light {
-        background-image: url("https://s3.hi168.com/hi168-19352-7673z2ft/Picture/bg1.jpg") !important;
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-attachment: fixed;
-        background-position-x: center;
-      }
-
-      /* 夜间背景图 */
-      .hope-ui-dark {
-        background-image: url("https://https://s3.hi168.com/hi168-19352-7673z2ft/Picture/bg4.jpg") !important;
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-attachment: fixed;
-        background-position-x: center;
-      }
-
-      /* 主列表白天模式透明 */
-      .obj-box.hope-stack.hope-c-dhzjXW.hope-c-PJLV.hope-c-PJLV-igScBhH-css {
-        backdrop-filter: blur(10px);
-        -webkit-backdrop-filter: blur(10px);
-        background-color: rgba(200, 200, 200, 0.3) !important;
-        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-      }
-
-      /* 主列表夜间模式透明 */
-      .obj-box.hope-stack.hope-c-dhzjXW.hope-c-PJLV.hope-c-PJLV-iigjoxS-css {
-        backdrop-filter: blur(10px);
-        -webkit-backdrop-filter: blur(10px);
-        background-color: rgba(0, 0, 0, 0.3) !important;
-        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-      }
-
-      /* readme 白天模式透明 */
-      .hope-c-PJLV.hope-c-PJLV-ikSuVsl-css {
-        backdrop-filter: blur(10px);
-        -webkit-backdrop-filter: blur(10px);
-        background-color: rgba(200, 200, 200, 0.3) !important;
-        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-      }
-
-      /* readme 夜间模式透明 */
-      .hope-c-PJLV.hope-c-PJLV-iiuDLME-css {
-        backdrop-filter: blur(10px);
-        -webkit-backdrop-filter: blur(10px);
-        background-color: rgba(0, 0, 0, 0.3) !important;
-        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-      }
-
-      /* 左侧侧边栏目录 */
-      /* 白天模式 */
-      .hope-ui-light .hope-c-PJLV-ieGWMbI-css {
-        background: rgba(200, 200, 200, 0.3) !important;
-      }
-
-      /* 夜间模式 */
-      .hope-ui-dark .hope-c-PJLV-ieGWMbI-css {
-        background-color: rgb(0 0 0 / 30%) !important;
-      }
-
-      /* 返回顶部 */
-      .hope-c-PJLV-ihVEsOa-css {
-        background: rgba(200, 200, 200, 0.3) !important;
-      }
-
-      .hope-ui-dark .hope-c-PJLV-ihVEsOa-css {
-        background-color: rgb(0 0 0 / 30%) !important;
-      }
-
-      /* 顶部 */
-      #root > .header {
-        background: rgba(255, 255, 255, 0);
-      }
-
-      /* 导航条 */
-      /* 白天模式 */
-      .hope-ui-light .body > .nav {
-        background-color: rgba(200, 200, 200, 0.3);
-        border-radius: var(--hope-radii-xl);
-      }
-
-      /* 夜间模式 */
-      .hope-ui-dark .body > .nav {
-        background-color: rgba(0, 0, 0, 0.3);
-        border-radius: var(--hope-radii-xl);
-      }
-
-      /* 隐藏导航条遮罩 */
-      .body > .nav::after {
-        display: none;
-      }
-
-      /* 白天模式 搜索主体+毛玻璃 */
-      .hope-ui-light .hope-c-PJLV-iiBaxsN-css {
-        background-color: rgba(200, 200, 200, 0.3) !important;
-        backdrop-filter: blur(10px) !important;
-      }
-
-      /* 白天模式 搜索栏输入框+毛玻璃 */
-      .hope-ui-light .hope-c-kvTTWD-hYRNAb-variant-filled {
-        background-color: rgba(200, 200, 200, 0.3) !important;
-        backdrop-filter: blur(10px) !important;
-      }
-
-      /* 白天模式 搜索按钮+毛玻璃 */
-      .hope-ui-light .hope-c-PJLV-ikEIIxw-css {
-        background-color: rgba(200, 200, 200, 0.3) !important;
-        backdrop-filter: blur(10px) !important;
-        padding: var(--hope-space-1) !important;
-      }
-
-      /* 夜间模式搜索主体+毛玻璃 */
-      .hope-ui-dark .hope-c-PJLV-iiBaxsN-css {
-        background-color: rgb(0 0 0 / 10%) !important;
-        backdrop-filter: blur(10px) !important;
-      }
-
-      /* 夜间模式搜索栏+毛玻璃 */
-      .hope-ui-dark .hope-c-kvTTWD-hYRNAb-variant-filled {
-        background-color: rgb(0 0 0 / 10%) !important;
-        backdrop-filter: blur(10px) !important;
-      }
-
-      /* 夜间模式 搜索按钮+毛玻璃 */
-      .hope-ui-dark .hope-c-PJLV-ikEIIxw-css {
-        background-color: rgb(0 0 0 / 10%) !important;
-        backdrop-filter: blur(10px) !important;
-        padding: var(--hope-space-1) !important;
-      }
-
-      /* 所有输入框加蓝色边框 */
-      input {
-        border: 2px solid #2196f3 !important;
-        border-radius: 10px !important;
-      }
-
-      /* 焦点状态加亮 */
-      input:focus {
-        border-color: #1976d2 !important;
-        box-shadow: 0 0 10px 2px rgba(33, 150, 243, 0.5) !important;
-        outline: none !important;
-      }
-
-      /* 设置字体阴影 */
-      * {
-        text-shadow: 0px 0px 0.8px !important;
-      }
-    </style>
-
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="referrer" content="same-origin" />
@@ -172,7 +11,7 @@
     <link href="/manifest.json" rel="manifest" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-title" content="OpenList" />
-    <link rel="apple-touch-icon" href="https://res.oplist.org/logo/logo.png" />
+    <link rel="apple-touch-icon" href="https://cdn.jsdmirror.cn/gh/alist-org/logo@main/logo.png" />
     <link
       rel="shortcut icon"
       type="image/ico"
@@ -185,13 +24,14 @@
         base_path: undefined,
         api: undefined,
         main_color: undefined,
-      };
-      window.__dynamic_base__ = window.OPENLIST_CONFIG.cdn || "";
+      }
+      window.__dynamic_base__ = window.OPENLIST_CONFIG.cdn || ""
     </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+
     <script src="/src/main.tsx" type="module"></script>
     <!-- customize body -->
   </body>
